# PuLSAR

./: .gitmodules  README.md  install_dependencies.sh
pulsar_cad/: README.md
pulsar_cad/kicad/encoder_pcb/: encoder_pcb-B_Cu.gbr  encoder_pcb-B_Mask.gbr  encoder_pcb-B_Paste.gbr  encoder_pcb-B_SilkS.gbr  encoder_pcb-Edge_Cuts.gbr  encoder_pcb-F_Cu.gbr  encoder_pcb-F_Mask.gbr  encoder_pcb-F_Paste.gbr  encoder_pcb-F_SilkS.gbr  encoder_pcb-NPTH.drl  encoder_pcb-cache.lib  encoder_pcb.bak  encoder_pcb.kicad_pcb  encoder_pcb.kicad_pcb-bak  encoder_pcb.pro  encoder_pcb.sch  encoder_pcb.step  fp-info-cache
pulsar_cad/kicad/laser_range_PCB/: laser_range_PCB-B_Cu.gbr  laser_range_PCB-B_Mask.gbr  laser_range_PCB-B_Paste.gbr  laser_range_PCB-B_SilkS.gbr  laser_range_PCB-Edge_Cuts.gbr  laser_range_PCB-F_Cu.gbr  laser_range_PCB-F_Mask.gbr  laser_range_PCB-F_Paste.gbr  laser_range_PCB-F_SilkS.gbr  laser_range_PCB-NPTH.drl  laser_range_PCB-PTH.drl  laser_range_PCB-cache.lib  laser_range_PCB.bak  laser_range_PCB.kicad_pcb  laser_range_PCB.kicad_pcb-bak  laser_range_PCB.pro  laser_range_PCB.sch  laser_range_PCB.step
pulsar_cad/kicad/main_pcb/: main_pcb-B_Cu.gbr  main_pcb-B_Mask.gbr  main_pcb-B_Paste.gbr  main_pcb-B_SilkS.gbr  main_pcb-Edge_Cuts.gbr  main_pcb-F_Cu.gbr  main_pcb-F_Mask.gbr  main_pcb-F_Paste.gbr  main_pcb-F_SilkS.gbr  main_pcb-NPTH.drl  main_pcb-PTH.drl  main_pcb-cache.lib  main_pcb.bak  main_pcb.kicad_pcb  main_pcb.kicad_pcb-bak  main_pcb.pro  main_pcb.sch  s-1170b33uc-otstfg.dcm  s-1170b33uc-otstfg.lib
pulsar_description/: CMakeLists.txt  README.md  package.xml
pulsar_description/meshes/: chassis.stl  laser_range_PCB.stl  wheel.stl
pulsar_description/urdf/: pulsar.urdf.xacro
pulsar_description/urdf/chassis/: chassis.urdf.xacro
pulsar_description/urdf/imu/: imu.urdf.xacro
pulsar_description/urdf/laser_range_finder/: laser_range_finder.urdf.xacro
pulsar_description/urdf/wheel/: wheel.urdf.xacro
pulsar_gazebo/: CMakeLists.txt  README.md  package.xml
pulsar_gazebo/launch/: multiple_robots.launch  one_robot.launch
pulsar_gazebo/maps/: map.yaml
pulsar_gazebo/plugins/: pulsar_gazebo_plugin.cpp  pulsar_gazebo_plugin.hpp
pulsar_gazebo/scripts/: pid_graph.py  spawn_pulsar_robot.py
pulsar_gazebo/worlds/: one_robot.world
pulsar_hardware/: CMakeLists.txt  README.md  build_esp.sh  package.xml
pulsar_hardware/include/pulsar_hardware/i2c/: i2c.hpp
pulsar_hardware/include/pulsar_hardware/led/: led.hpp
pulsar_hardware/include/pulsar_hardware/motor_driver/: motor_driver.hpp
pulsar_hardware/src/pulsar_hardware/i2c/: i2c.cpp  i2c_test.cpp
pulsar_hardware/src/pulsar_hardware/led/: blink.cpp  led.cpp
pulsar_hardware/src/pulsar_hardware/motor_driver/: motor_driver.cpp  motor_test.cpp
pulsar_lib/: CMakeLists.txt  README.md  package.xml
pulsar_lib/include/motor_control/: motor_control.hpp
pulsar_lib/include/odometry/: odometry.hpp
pulsar_lib/include/pulsar_lib/kalman_filter/: kalman_filter.hpp
pulsar_lib/include/pulsar_lib/motor_control/: motor_control.hpp
pulsar_lib/include/pulsar_lib/odometry/: odometry.hpp
pulsar_lib/src/kalman_filter/: kalman_filter.cpp
pulsar_lib/src/odometry/: odometry.cpp
pulsar_lib/src/pulsar_lib/kalman_filter/: kalman_filter.cpp
pulsar_lib/src/pulsar_lib/motor_control/: motor_control.cpp
pulsar_lib/src/pulsar_lib/odometry/: odometry.cpp
pulsar_localisation/: CMakeLists.txt  README.md  package.xml
pulsar_localisation/include/pulsar_localisation/: cloud_generator.hpp
pulsar_localisation/include/pulsar_localisation/cloud_generator/: cloud_generator.hpp
pulsar_localisation/include/pulsar_localisation/map_manager/: map_manager.hpp
pulsar_localisation/include/pulsar_localisation/maths/: dbscan.hpp  kmeans.hpp  useful_functions.hpp
pulsar_localisation/include/pulsar_localisation/pose_estimators/: average_mcl_swarm_pose_estimator.hpp  mcl_single_robot_pose_estimator.hpp  mcl_swarm_pose_estimator.hpp  pso_pose_estimator.hpp  single_robot_pose_estimator.hpp  swarm_pose_estimator.hpp
pulsar_localisation/include/pulsar_localisation/robot_models/: base_robot_model.hpp  odometry_robot_model.hpp  robot_model.hpp  scan_matching_robot_model.hpp
pulsar_localisation/include/pulsar_localisation/sensor_models/: range_cloud_sensor_model.hpp
pulsar_localisation/launch/: localisation.launch
pulsar_localisation/scripts/: learn_range_sensor_intrinsic_parameters  perfect_swarm_localisation  plot_robot_movements  plot_swarm_movements  simple_robot_state_machine
pulsar_localisation/src/pulsar_localisation/: cloud_generator.cpp  localisation_node.cpp
pulsar_localisation/src/pulsar_localisation/cloud_generator/: cloud_generator.cpp
pulsar_localisation/src/pulsar_localisation/map_manager/: map_manager.cpp
pulsar_localisation/src/pulsar_localisation/maths/: dbscan.cpp  kmeans.cpp  useful_functions.cpp
pulsar_localisation/src/pulsar_localisation/pose_estimators/: average_mcl_swarm_pose_estimator.cpp  mcl_single_robot_pose_estimator.cpp  mcl_swarm_pose_estimator.cpp  pso_pose_estimator.cpp  single_robot_pose_estimator.cpp  swarm_pose_estimator.cpp
pulsar_localisation/src/pulsar_localisation/robot_models/: base_robot_model.cpp  odometry_robot_model.cpp  robot_model.cpp  scan_matching_robot_model.cpp
pulsar_localisation/src/pulsar_localisation/sensor_models/: range_cloud_sensor_model.cpp
pulsar_server/: CMakeLists.txt  README.md  package.xml  setup.py
pulsar_server/nodes/: single_robot_teleop.py
pulsar_server/src/pulsar_server/: message_type.py  robot_connection.py
pulsar_state_machines/: CMakeLists.txt  README.md  package.xml  setup.py
pulsar_state_machines/nodes/: state_machine
pulsar_state_machines/src/pulsar_state_machines/: base_state_machine.py  group_target_state_machine.py  robot_state_machine.py
