<?xml version="1.0"?>
<package format="2">
  <name>pulsar_description</name>
  <version>0.0.0</version>
  <description>The pulsar_description package contains xacro files to generate URDF for the PuLSAR robots.</description>

  <maintainer email="nrh16@ic.ac.uk">Nick Hafner</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>xacro</exec_depend>
</package>
