<?xml version="1.0"?>
<package format="2">
  <name>pulsar_gazebo</name>
  <version>0.0.0</version>
  <description>The pulsar_gazebo package</description>

  <maintainer email="nrh16@ic.ac.uk">Nick Hagner</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <depend>roscpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"
                gazebo_media_path="${prefix}"
                plugin_path="${prefix}/lib"/>
  </export>
</package>
