<?xml version="1.0"?>
<package format="2">
  <name>pulsar_hardware</name>
  <version>0.0.0</version>
  <description>The pulsar_hardware package</description>

  <maintainer email="nrh16@ic.ac.uk">Nick Hafner</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>pulsar_lib</depend>
</package>
