<?xml version="1.0"?>
<package format="2">
  <name>pulsar_lib</name>
  <version>0.0.0</version>
  <description>The pulsar_lib package contains libraries that are used both in simulation and on the real PuLSAR robots.</description>

  <maintainer email="nrh16@ic.ac.uk">Nick Hafner</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>Eigen3</depend>
</package>
